fix: sebo profile spacing

--- a/src/components/ProfilePhoto/style.css
+++ b/src/components/ProfilePhoto/style.css
@@ -4,13 +4,13 @@
   height: 175px;
   padding: 10px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   border-radius: 100%;
   gap: 10px;
   box-shadow: var(--Achados-Success);
   overflow: 'hidden';
   align-items: center;
-  margin-bottom: 30px;
+  margin-top:1rem;
 }
 
 .icon-image {
